<resources>
    <string name="app_name">TRPSearcher</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="trpsearcher">TRPSearcher</string>
    <string name="log_in">Войти</string>
    <string name="register">Впервые здесь? Зарегистрируйтесь!</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="email">Email</string>
    <string name="enter_birthdate">Введите дату рождения</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="menu_home_str">Домашняя страница</string>
    <string name="profile">Профиль</string>
    <string name="menu_board">Доска объявлений</string>
    <string name="menu_chat">Чаты</string>
    <string name="menu_games">Мои игры</string>
    <string name="name">Имя</string>
    <string name="birthdate">Дата рождения</string>
    <string name="about_me">О себе</string>
    <string name="edit">Редактировать</string>
    <string name="favorites">Любимое</string>
    <string name="create_form">Создать объявление</string>
    <string name="title">Заголовок</string>
    <string name="place_form">Разместить объявление</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="enter_message">Введите текст сообщения</string>
    <string name="send">Отправить</string>
    <string name="rate">Рейтинг</string>
    <string name="welcome_to_trps">Добро пожаловать в TRPSearcher!</string>
    <string name="welcome_text">В этом приложении вы можете найти соигрока или соавтора для какого-либо сюжета.\nНе забудьте заполнить профиль.</string>
    <string name="back">Назад</string>
    <string name="failed_get_data">Не удалось получить данные</string>
    <string name="ratedd">Rate: </string>
    <string name="failed_edit_profile">Не удалось отредактировать профиль</string>
    <string name="success_edit_profile">Профиль успешно отредактирован</string>
    <string name="failed_ger_forms">Не удалось получить объявления</string>
    <string name="send_message">Написать сообщение</string>
    <string name="psws_not_eq">Пароли не совпадают</string>
    <string name="success_register">Пользователь успешно зарегистрирован</string>
    <string name="ip">http://192.168.0.13/</string>
    <string name="register_php">register.php</string>
    <string name="login_php">login.php</string>
    <string name="profile_php">profile.php</string>
    <string name="edit_profile_php">edit_profile.php</string>
    <string name="get_chats_php">get_chats.php</string>
    <string name="author_profile">Профиль\nавтора</string>
    <string name="my_forms">Мои объявления</string>
    <string name="form_close_success">Объявление успешно закрыто. Обновите страницу для актуальных результатов</string>
    <string name="close_php">close.php</string>
    <string name="form">form</string>
    <string name="close_form">Закрыть объявление</string>
    <string name="enter_game_descr">Введите описание игры</string>
    <string name="hint_gmcr">Обратите внимание, что игру можно создать только с тем пользователем, вместе с которым у вас есть активный чат.</string>
    <string name="create">Создать</string>
    <string name="choose_player">Выберите соигрока</string>
    <string name="create_game_php">create_game.php</string>
    <string name="enter_login_player">Введите логин соигрока</string>
    <string name="send_post">Отправить пост</string>
    <string name="send_post_php">send_post.php</string>
    <string name="close_game">Завершить игру</string>
    <string name="rate_already_given">Вы уже оставляли оценку на этого пользователя</string>
    <string name="send_message_php">send_message.php</string>
    <string name="get_games">get_games.php</string>
    <string name="get_forms">get_forms.php</string>
    <string name="rate_profile">Рейтинг</string>
    <string name="add_form_php">add_form.php</string>
    <string name="check_right_fields">Проверьте правильность заполнения полей</string>
    <string name="change_status_php">change_status.php</string>
    <string name="rate_php">rate.php</string>
</resources>