<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/pr_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_margin="15dp"
        />

    <TextView
        android:id="@+id/pr_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"

        />

    <EditText
        android:id="@+id/pr_user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/pr_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"

        />

    <EditText
        android:id="@+id/rg_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/pr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"
        />

    <EditText
        android:id="@+id/rg_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/pr_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"
        />

    <EditText
        android:id="@+id/pr_user_bitrthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/pr_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"
        />

    <TextView
        android:id="@+id/pr_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:layout_gravity="center_horizontal"
        android:textSize="19dp"
        android:layout_marginLeft="12dp"
        />


    <Button
        android:id="@+id/pr_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/edit"
        />

</LinearLayout>

