<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.ProfileActivity">

        <TextView
            android:id="@+id/pr_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_margin="15dp"
            />

        <TextView
            android:id="@+id/pr_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <EditText
            android:id="@+id/pr_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:enabled="false"
            />

        <TextView
            android:id="@+id/pr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <EditText
            android:id="@+id/pr_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/pr_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <EditText
            android:id="@+id/pr_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/pr_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <EditText
            android:id="@+id/pr_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:clickable="false"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/pr_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />

        <EditText
            android:id="@+id/pr_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:inputType="textMultiLine"
            android:lines="6"
            android:gravity="top|left"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/pr_rate"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/pr_edit_btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/edit"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>