<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UserProfileActivity">


        <TextView
            android:id="@+id/us_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:layout_margin="15dp"
            />

        <TextView
            android:id="@+id/us_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:layout_marginLeft="12dp"

            />

        <TextView
            android:id="@+id/us_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            android:textColor="#000000"

            />

        <TextView
            android:id="@+id/us_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:layout_marginLeft="12dp"

            />

        <TextView
            android:id="@+id/us_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/us_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:layout_marginLeft="12dp"
            />

        <TextView
            android:id="@+id/us_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/us_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthdate"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:layout_marginLeft="12dp"
            />

        <TextView
            android:id="@+id/us_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/us_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:layout_marginLeft="12dp"
            />

        <TextView
            android:id="@+id/us_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_horizontal"
            android:lines="5"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/us_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:layout_gravity="center_horizontal"
            android:textSize="19dp"
            android:layout_marginLeft="12dp"
            />
        <TextView
            android:id="@+id/us_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="98dp">

            <Button
                android:id="@+id/us_plus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="Похвалить"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="25dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/us_minus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Пожаловаться"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                app:layout_constraintEnd_toStartOf="@+id/us_plus"
                app:layout_constraintHorizontal_bias="0.315"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="25dp"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>